@@ -1,3 +1,8 @@
+2013-01-29  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-invoke): encode the string for
+	`url-request-data' as UTF-8. Fixes issue 16
+
 2011-12-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-resolve-references-for-sequence-type)
